# data-center

./: main.py  pyproject.toml  stock.json
project/main/templates/: base.html  index.html
project/project/: settings.py
